<resources>
    <string name="app_name">IuvoCare</string>

    <string name="home_title">Inicio</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="change_pwd">Cambiar Contraseña</string>
    <string name="sign_up">Registrate</string>
    <string name="name_des">Nombre y Apellido</string>
    <string name="email_des">Dirección de Correo Electrónico</string>
    <string name="password_des">Contraseña</string>
    <string name="google_register">Registro con Google</string>
    <string name="forgot_password">Me olvidé mi contraseña</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="terms_of_service">Términos del Servicio</string>
    <string name="profile_menu">Perfil</string>
    <string name="history">Historial</string>
    <string name="med_history">Historial de Medicamentos</string>
    <string name="more">Más</string>
    <string name="patient_name_placeholder">Juan</string>
    <string name="message_name">Ibuprofeno 200mg</string>
    <string name="time_of_message_placeholder">18:07</string>}
    <string name="kind_placeholder">Medicación</string>
    <string name="status_placeholder">Completado</string>
    <string name="add_appointment">Agregar una Cita Médica</string>
    <string name="add_doctor_name">Nombre del Médico</string>
    <string name="need_date">Falta agregar fecha</string>
    <string name="need_time">Falta agregar hora</string>
    <string name="add_date">Agregar Fecha </string>
    <string name="add_time">Agregar Hora</string>
    <string name="add_date_and_time">Agregar Fecha y Hora</string>
    <string name="add_confirm">Agregar</string>
    <string name="add_description">Descripción (Opcional)</string>
    <string name="add_medication">Agregar un Medicamento</string>
    <string name="medication_name">Nombre del Medicamento</string>
    <string name="week_days">Agregar Días de la Semana</string>
    <string name="auth_error">Error en la Autenticación</string>
    <string name="user">Perfil</string>
    <string name="user_config">Configuración del Perfil</string>
    <string name="user_placeholder">andykamin3@gmail.com</string>
    <string name="mail_prompt">E-Mail del Paciente</string>
    <string name="add_user">Agregar Usuario</string>
    <string name="search">Buscar</string>
    <string name="pass_parameters">Tu contraseña debe tener una longitud de aunque sea 8 caractéres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_imagr">Agregar Imagen</string>
    <string name="datePlaceHolder">21 de agosto de 2020</string>
    <string name="timePlaceholder">16:00</string>
    <string name="med_image_placeholder">This is the medication image</string>
    <string name="imagen_de_la_medicaci_n">Imagen de la Medicación</string>
    <string name="placeholder">TextView</string>
    <string name="agregar_medicaci_n">Agregar Medicación</string>
    <string name="agregar_cita_m_dica">Agregar Cita Médica</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="calendario">Calendario</string>
    <string name="yes">CONFIRMAR</string>
    <string name="no">CANCELAR</string>
    <string name="action_canceled">Acción cancelada</string>
    <string name="delete_button">Borrar</string>
</resources>